...
    android:padding="5dp"
    android:layout_margin="5dp"
    android:orientation="horizontal">


    <TextView
        android:id="@+id/itemName"
        android:layout_width="151dp"
        android:layout_height="31dp"
        android:layout_marginTop="16dp"
        android:autoSizeTextType="uniform"
        android:text="pname"
        android:textAlignment="center"
...
